updated components for main page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,35 @@
 .primary-color {
   color: #9327F0;
 }
+
+.background-gradient {
+  background: hsla(271, 87%, 91%, 1);
+
+background: linear-gradient(270deg, hsla(271, 87%, 91%, 1) 10%, hsla(0, 0%, 100%, 1) 100%);
+
+background: -moz-linear-gradient(270deg, hsla(271, 87%, 91%, 1) 10%, hsla(0, 0%, 100%, 1) 100%);
+
+background: -webkit-linear-gradient(270deg, hsla(271, 87%, 91%, 1) 10%, hsla(0, 0%, 100%, 1) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#E9D4FC", endColorstr="#FFFFFF", GradientType=1 );
+}
+
+.text-gradient {
+  background: #9327F0;
+  background: linear-gradient(to bottom, #9327F0 0%, #F964E0 79%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.fixed-navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  z-index: 40; 
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15); 
+}
  
 @layer base {
   :root {
